# pocket-tts-onnx-export

./: .gitignore  .gitmodules  EXPORT_REPORT.md  HF_README.md  MIGRATION_NOTE.md  README.md  export.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_clip.onnx  test_clip_v11.onnx  tmp_inspect_io.py  tmp_inspect_voice_state.py  tmp_print_flow_inputs.py  tmp_q4_flow.py  tsconfig.json
benchmarks/: compare_onnx_node.ts  native_compare.py  values.json
experiments/cleanroom/onnxsim_ort/: validation_report.json  validation_report.txt
experiments/cleanroom/ort_only/: summary.json  validation_report.json  validation_report.txt
hf/: README.md
notebooks/: inspect_graph.ipynb
onnx_export/: export_utils.py  external_data.py  wrappers.py
scripts/: __init__.py  check_init_usage.py  compare_audio.py  debug_expand.py  debug_native_vs_onnx.py  export_flow_lm.py  export_mimi_and_conditioner.py  export_monolith.py  export_monolith_ar.py  generate_ref_audio.py  inspect_embedding.py  inspect_loop.py  inspect_model.py  inspect_onnx.py  inspect_text_conditioner.py  latent_comparison.py  list_nodes.py  quantize.py  quantize_flowlm_test.py  quantize_test_flow_full.py  run_onnx_pipeline.py  test_flow_output.py  test_monolith_parity.py  test_monolith_runtime.py  tokenizer_parity.py  upload_hf.py  validate_onnx_contracts.py
tests/: test_export_embeddings.py  test_export_flow_lm.py  test_external_data.py  test_mimi_decoder_parity.py  test_monolith_runtime.py  test_quantize.py  test_run_onnx_pipeline.py
